force-app/main/default/objects/AAO_Model_Config__mdt/AAO_Model_Config__mdt.object-meta.xml
<CustomObject>
    <label>AAO Model Config</label>
    <pluralLabel>AAO Model Config</pluralLabel>
</CustomObject>