force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Active__c.field-meta.xml
<CustomField>
    <fullName>AAO_Active__c</fullName>
    <label>Active</label>
    <description>Written by: a human, in this record. Read by: AAO_Extract, which refuses to call out when false. The switch that stops model calls without a deploy.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, which refuses to call out when false. The switch that stops model calls without a deploy.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>