force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Anthropic_Beta__c.field-meta.xml
<CustomField>
    <fullName>AAO_Anthropic_Beta__c</fullName>
    <label>AnthropicBeta</label>
    <description>Written by: a human, in this record. Read by: AAO_Extract, sent as the anthropic-beta header when non-blank. Blank is the normal case. Present so that opting into a beta is a config change with a version bump behind it rather than an Apex edit.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, sent as the anthropic-beta header when non-blank. Blank is the normal case. Present so that opting into a beta is a config change with a version bump behind it rather than an Apex edit.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>