force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Bind_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Bind_Charter__c</fullName>
    <description>The stage 2 charter name, stamped on the Candidate rows binding promotes.</description>
    <inlineHelpText>The stage 2 charter name, stamped on the Candidate rows binding promotes.</inlineHelpText>
    <label>BindCharter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>