force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Bind_Charter_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Bind_Charter_Version__c</fullName>
    <label>BindCharterVersion</label>
    <description>Version of the stage 2 charter.</description>
    <inlineHelpText>Version of the stage 2 charter.</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>