force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Bind_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>AAO_Bind_Group_Size__c</fullName>
    <label>BindGroupSize</label>
    <description>How many bind items ride in one callout. MEASURED, never assumed: ruling 6 of the 3 August inbox. Time one small call, then choose. Lives in config rather than Apex because the next measurement will move it and a constant in Apex would make a measured number look like a design decision.</description>
    <inlineHelpText>How many bind items ride in one callout. MEASURED, never assumed: ruling 6 of the 3 August inbox. Time one small call, then choose. Lives in config rather than Apex because the next measurement will move it and a constant in Apex would make a measured number look like a design decision.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>