force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Blind_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Blind_Charter__c</fullName>
    <description>Written by: a human, in this record. Read by: AAO_Extract.review. The second reader is a separate charter from extraction and carries its own name, because the two are versioned independently and a run has to be attributable to both.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract.review. The second reader is a separate charter from extraction and carries its own name, because the two are versioned independently and a run has to be attributable to both.</inlineHelpText>
    <label>BlindCharter</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>