force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Blind_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AAO_Blind_Enabled__c</fullName>
    <label>BlindEnabled</label>
    <description>Written by: a human, in this record. Read by: AAO_Pipeline. When false the second reader does not run and coverage falls back to elements with located spans, which is the session 7 behaviour that let a refuting span count as coverage. Off is the unsafe setting and is here only so the second reader can be switched out for a comparison.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Pipeline. When false the second reader does not run and coverage falls back to elements with located spans, which is the session 7 behaviour that let a refuting span count as coverage. Off is the unsafe setting and is here only so the second reader can be switched out for a comparison.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>