force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Call_Class__c.field-meta.xml
<CustomField>
    <fullName>AAO_Call_Class__c</fullName>
    <description>WHICH CLASS OF CALL THIS RECORD CONFIGURES: router, read, verify or match. Blank on the Default record, which is the fallback every class resolves through when no record names it. A RECORD per class rather than a FIELD per class, deliberately: the per-role fields on Default cover inventory, bind and verify and cover them by having been added one at a time, so the match call had no field at all and rode verify&apos;s. A new call class is a new RECORD an admin can add, never a schema change - which is also what makes this the surface BYOLLM lands on, since a customer registers their own models and names them here.</description>
    <label>Call Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>