force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter__c</fullName>
    <description>Written by: a human, in this record. Read by: AAO_Extract, stamped onto AAO_Candidate__c.AAO_Charter__c. Which charter proposed this.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, stamped onto AAO_Candidate__c.AAO_Charter__c. Which charter proposed this.</inlineHelpText>
    <label>Charter</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>