force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Charter_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter_Version__c</fullName>
    <description>Written by: a human, in this record, and bumped whenever the prompt or the output schema changes in any way that could change what the model proposes. Read by: AAO_Extract, stamped onto every Candidate. This is the grain abstention analysis groups by, so a silent prompt edit under a fixed version corrupts every rate computed across the boundary.</description>
    <inlineHelpText>Written by: a human, in this record, and bumped whenever the prompt or the output schema changes in any way that could change what the model proposes. Read by: AAO_Extract, stamped onto every Candidate. This is the grain abstention analysis groups by, so a silent prompt edit under a fixed version corrupts every rate computed across the boundary.</inlineHelpText>
    <label>CharterVersion</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>