force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Effort__c.field-meta.xml
<CustomField>
    <fullName>AAO_Effort__c</fullName>
    <description>Written by: a human, in this record. Read by: AAO_Extract, sent as output_config.effort. Part of what produced a given result and therefore part of what has to be recorded alongside it.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, sent as output_config.effort. Part of what produced a given result and therefore part of what has to be recorded alongside it.</inlineHelpText>
    <label>Effort</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>