force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>AAO_Endpoint_Path__c</fullName>
    <label>EndpointPath</label>
    <description>Written by: a human, in this record. Read by: AAO_Extract. The path appended to the named credential, normally /v1/messages.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract. The path appended to the named credential, normally /v1/messages.</inlineHelpText>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>