force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Inventory_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Inventory_Charter__c</fullName>
    <description>The stage 1 charter name, stamped on every Candidate the read produces. A different charter from AAO_Extract_Evidence: the read no longer proposes verdicts, so rows from the two must never share a version string.</description>
    <inlineHelpText>The stage 1 charter name, stamped on every Candidate the read produces. A different charter from AAO_Extract_Evidence: the read no longer proposes verdicts, so rows from the two must never share a version string.</inlineHelpText>
    <label>InventoryCharter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>