force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Inventory_Charter_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Inventory_Charter_Version__c</fullName>
    <description>Version of the stage 1 charter. Moves whenever the instructions move, which is the whole point of versioning a charter.</description>
    <inlineHelpText>Version of the stage 1 charter. Moves whenever the instructions move, which is the whole point of versioning a charter.</inlineHelpText>
    <label>InventoryCharterVersion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>