force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Inventory_Max_Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AAO_Inventory_Max_Output_Tokens__c</fullName>
    <label>InventoryMaxOutputTokens</label>
    <description>The hard output bound on stage 1, owed since session 72 and set from measurement rather than comfort. THE CEILING IS A TIME BUDGET AND max_tokens IS THE ONLY DIAL THAT BOUNDS IT: at the ~84 output tokens per second measured for the strong model through this credential (measurement 71: 7,339 tokens in 87,805 ms), 16,000 tokens is about 190 seconds of generation, which cannot fit a 120-second per-transaction ceiling under any circumstances. The shared AAO_Max_Output_Tokens__c stays 16,000 for the small stages where it is harmless. A truncated response still throws on stop_reason=max_tokens; a bound that truncates is a reported finding, and an unbounded call is a guaranteed timeout.</description>
    <inlineHelpText>Hard output bound for stage 1, derived from the measured generation rate and the 120-second callout ceiling. Not a comfort value.</inlineHelpText>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>