force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Inventory_Model__c.field-meta.xml
<CustomField>
    <fullName>AAO_Inventory_Model__c</fullName>
    <description>Charters v2.4 P7.3 stage 1, the read. The strong model that produces the inventory of potential claims. Written by a human in this record. Read by AAO_Extract.inventorySpec. Blank falls back to AAO_Model_Name__c so the retired one-call path keeps its own model.</description>
    <inlineHelpText>Charters v2.4 P7.3 stage 1, the read. The strong model that produces the inventory of potential claims. Written by a human in this record. Read by AAO_Extract.inventorySpec. Blank falls back to AAO_Model_Name__c so the retired one-call path keeps its own model.</inlineHelpText>
    <label>InventoryModel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>