force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Max_Findings_Per_Pass__c.field-meta.xml
<CustomField>
    <fullName>AAO_Max_Findings_Per_Pass__c</fullName>
    <description>Written by: a human, like everything on this type. Read by: the cardinality guard. The upper bound on handed units in one pass, per invariant 9. It lives here and not in Apex for the same reason the model name does: the one place a person decides what the build runs under, with no code allowed to reach past it. Paired with AAO_Max_Output_Tokens__c, which is the reason this bound exists at all.</description>
    <label>Max Findings Per Pass</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>