force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Max_Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AAO_Max_Output_Tokens__c</fullName>
    <label>MaxOutputTokens</label>
    <description>Written by: a human, in this record. Read by: AAO_Extract, sent as max_tokens. A ceiling on the response, not on thinking depth. Too low and the JSON truncates mid-object, which surfaces as a parse failure rather than a short answer.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, sent as max_tokens. A ceiling on the response, not on thinking depth. Too low and the JSON truncates mid-object, which surfaces as a parse failure rather than a short answer.</inlineHelpText>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>