force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>AAO_Model_Name__c</fullName>
    <label>ModelName</label>
    <description>Written by: a human, in this record, deliberately. Read by: AAO_Extract, which sends it as the model id, and every Candidate row, which is stamped with it. Never hardcoded in Apex: a measurement that cannot name the model that produced it is not a measurement.</description>
    <inlineHelpText>Written by: a human, in this record, deliberately. Read by: AAO_Extract, which sends it as the model id, and every Candidate row, which is stamped with it. Never hardcoded in Apex: a measurement that cannot name the model that produced it is not a measurement.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>