force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>AAO_Named_Credential__c</fullName>
    <label>NamedCredential</label>
    <description>Written by: a human, in this record. Read by: AAO_Extract, which builds callout:{this}/{endpoint path}. The endpoint hostname and the API key appear nowhere in Apex.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, which builds callout:{this}/{endpoint path}. The endpoint hostname and the API key appear nowhere in Apex.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>