force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Probe__c.field-meta.xml
<CustomField>
    <fullName>AAO_Probe__c</fullName>
    <label>Probe</label>
    <length>10</length>
    <type>Text</type>
</CustomField>