force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>AAO_Timeout_Ms__c</fullName>
    <description>Written by: a human, in this record. Read by: AAO_Extract, set on the HttpRequest. Apex caps this at 120000 and the platform is the authority, so a larger value here is silently the cap.</description>
    <inlineHelpText>Written by: a human, in this record. Read by: AAO_Extract, set on the HttpRequest. Apex caps this at 120000 and the platform is the authority, so a larger value here is silently the cap.</inlineHelpText>
    <label>TimeoutMs</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>