force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Verify_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verify_Charter__c</fullName>
    <description>The stage 3 charter name. A different charter from AAO_Blind_Reader, which adjudicated element coverage; this one checks coextension on subject, scope and quantity.</description>
    <inlineHelpText>The stage 3 charter name. A different charter from AAO_Blind_Reader, which adjudicated element coverage; this one checks coextension on subject, scope and quantity.</inlineHelpText>
    <label>VerifyCharter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>