force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Verify_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verify_Group_Size__c</fullName>
    <description>How many verify items ride in one callout. Measured, never assumed, same law as AAO_Bind_Group_Size__c.</description>
    <inlineHelpText>How many verify items ride in one callout. Measured, never assumed, same law as AAO_Bind_Group_Size__c.</inlineHelpText>
    <label>VerifyGroupSize</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>