force-app/main/default/objects/AAO_Model_Config__mdt/fields/AAO_Verify_Model__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verify_Model__c</fullName>
    <description>Charters v2.4 P7.3 stage 3, the blind reader. The smallest model available through the current credential, established by probe from the calling runtime and recorded in BUILD_JOURNAL. Gated, not trusted: one adjudicated comparison against the strong model is owed before its rejections are believed.</description>
    <inlineHelpText>Charters v2.4 P7.3 stage 3, the blind reader. The smallest model available through the current credential, established by probe from the calling runtime and recorded in BUILD_JOURNAL. Gated, not trusted: one adjudicated comparison against the strong model is owed before its rejections are believed.</inlineHelpText>
    <label>VerifyModel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>